--- a/Resources/styles/styles.css
+++ b/Resources/styles/styles.css
@@ -48,21 +48,31 @@ p, ul, ol {
 }
 
 .content {
-    position: relative;
-    margin: 6rem auto 1rem;
+    margin: 1rem auto 1rem;
     padding: 1rem 2rem;
 }
 
 .swift-logo {
-    position: absolute;
-    width: 256px;
-    height: 256px;
-    top: -64px;
-    right: -64px;
-    z-index: -1;
-    opacity: 0.25;
-    -webkit-transform: rotate(35deg);
-    transform: rotate(35deg);
+    display: block;
+    margin: 5rem auto 0 auto;
+    width: 126px;
+    height: 126px;
+}
+
+.footer > ul {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+}
+
+.footer > ul > li {
+    display: block;
+    align-self: center;
+    list-style-type: none;
 }
 
 @media screen and (min-width: 600px) {
@@ -93,10 +103,7 @@ p, ul, ol {
         max-width:960px;
     }
 
-	.swift-logo{
-		top:-128px;
-		right:-128px;
-		width:512px;
-		height:512px
-	}
+    .footer > ul {
+        flex-direction: row;
+    }
 }
